[tool.poetry]
name = "comstock-processor"
version = "0.1.0"
description = "A tool to download and process ComStock data."
authors = ["Nicholas Long <nllong>"]
license = "BSD"
packages = [
    { include = "lib" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">2"
requests = "~2.32"
pathlib = "^1.0.1"

fastparquet = "^2024.5.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.5"
scikit-learn = "^1.7.1"
jinja2 = "^3.1.4"
tabulate = "^0.9.0"
geopandas = "^1.1.1"
nbformat = "^5.10.4"
tqdm = "^4.67.1"
jupyter = "^1.1.1"
plotly = "^6.3.0"
xlwings = "^0.33.14"
psutil = "^7.0.0"
nrel-pysam = "^7.1.0"
pyarrow = "^21.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.10.0"
mypy = "^1.17"
pre-commit = "^4.3.0"
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
files = [
    "your_module.py",
    "tests/"
]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--disable-warnings"
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests that download data",
    "unit: marks tests as fast unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
