[tool.poetry]
name = "comstock-processor"
version = "0.1.0"
description = "A tool to download and process ComStock data."
authors = ["Nicholas Long <nllong>"]
license = "BSD"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
pandas = ">2"
requests = "~2.32"
pathlib = "^1.0.1"
geopandas = "^1.1.1"
fastparquet = "^2024.5.0"
tqdm = "^4.67.1"
seaborn = "^0.13.2"
matplotlib = "^3.10.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-mock = "^3.10.0"
mypy = "^1.17"
pre-commit = "^4.3.0"
ipykernel = "^7.1.0"
jupyter = "^1.1.1"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.8"
files = [
    "your_module.py",
    "tests/"
]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--disable-warnings"
]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests that download data",
    "unit: marks tests as fast unit tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
